# MMDT

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: mmdt_rat20.pc
devel/share/mmdt_rat20/cmake/: mmdt_rat20Config.cmake
src/mmdt_rat20/: CMakeLists.txt  package.xml
src/mmdt_rat20/config/: cilindro2Z.yaml  cilindroZ.yaml  effort_rat20_manipDer.yaml  effort_rat20_manipIzq.yaml  effort_rat20_movilTorso.yaml  esferaControl.yaml  esferaControl2.yaml  esferaX.yaml  esferaX2.yaml  esferaY.yaml  esferaY2.yaml  esferaZ.yaml  esferaZ2.yaml  joints.yaml  latitaCervY.yaml  latitaX.yaml  latitaY.yaml  latitaZ.yaml  position_rat20_manipDer.yaml  position_rat20_manipIzq.yaml  position_rat20_movilTorso.yaml
src/mmdt_rat20/development/: compareVector.py
src/mmdt_rat20/launch/: basicLaunch.launch  display.launch  effortPlatf_PosMMDT_controller.launch  effortPosMMDT_controller.launch  effortPos_controller.launch  effort_controller.launch  esfera_control.launch  gazebo.launch  ignition.launch  ignitionMMDT.launch  ignitionRatePos.launch  ignitionV2.launch  ignitionWselection.launch  mmdtEsfera.launch  mmdt_mesaLatita.launch  mmdt_test.launch
src/mmdt_rat20/media/materials/scripts/: base.material
src/mmdt_rat20/meshes/: rueda4.STL
src/mmdt_rat20/plugins/: ContactPlugin.cc  ContactPlugin.hh
src/mmdt_rat20/scripts/: MMDT_Bridge.py  MMDT_Bridge_v3.py  MMDT_Bridge_v3_MMDT.py  MMDT_Bridge_v3_RatePos.py  dispImgCompressColor.py  dispImgKinectDepth.py
src/mmdt_rat20/scripts/desarrollo/: MMDT_Bridge.py  MMDT_Bridge_v2.py  desarrollo.py  devColor.py  dispImgColor.py  dispImgColor2.py  dispImgColorDepth.py  dispImgColorDepth_respaldo.py  dispImgKinectBase.py  testDepth.py
src/mmdt_rat20/urdf/: esferitaNoInertiaPeque.xacro  esferitaNoInertiaPeque2.xacro  latitaCerveza.xacro  latitaCervezaGrande.xacro  latitaObjetivo.xacro  latitaObjetivoGrande.xacro  mesaDer.xacro  mesaIzq.xacro  mmdt_rat20.urdf  mmdt_rat20_Camaras.urdf  mmdt_rat20_CamarasDepth.urdf  mmdt_rat20_CamarasDepth_respaldo.urdf  mmdt_rat20_CamarasTorso.urdf
src/mmdt_rat20/worlds/: arboles.world  dev_mesaParedPuerta.world  empty.world  floorFriction_MesaParedLatas.world  floorFriction_MesaParedLatas_respaldo.world  floorFriction_basico.world  floorFriction_basico_collision.world  floorFriction_basico_collision_RatePos.world  floorFriction_basico_collision_RatePosMMDT.world  floorFriction_basico_collision_Wsel.world  mesas.world
(+33 files in other folders)
