<?xml version="1.0"?>
<package format="2">
  <name>mmdt_rat20</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mmdt_rat20 </p>
    <p>This package contains configuration data, 3D models and launch files for mmdt_rat20 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="fernandochicaiza137@gmail.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <depend>roslaunch</depend>

  <!-- <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz</depend> -->

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- <run_depend>gazebo_ros</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend> -->

  <export>
    <architecture_independent />
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package> 